# GeoTortoise

./: .gitignore  README.md  aerich.ini  pyproject.toml
geotortoise/: _base_functions.py  exceptions.py  fields.py  functions.py  utils.py
geotortoise/client/: __init__.py  base.py  client.py  executor.py  schema_generator.py
migrations/models/: 1_20210426104128_None.sql
tests/: conftest.py  docker-compose.yml  models.py  pytest.ini  test_geotortoise.py  test_utils.py
