[tool.poetry]
name = "geotortoise"
version = "0.2.0"
description = "Tortoise-ORM with geospatial support"
authors = ["PhotoPills Team <it@photopills.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Shapely = "^2.0.1"
asyncpg = "^0.27.0"
tortoise-orm = ">=0.18.1"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
asynctest = "^0.13.0"
black = "^21.4b0"
flake8 = "^3.9.1"
pre-commit = "^2.12.1"
isort = "^5.8.0"
pytest-aiohttp = "^0.3.0"
aerich = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
